--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,7 +49,7 @@ jobs:
     env:
       GROQ_API_KEY: ${{ secrets.GROQ_API_KEY }}
       DATABASE_URL: ${{ secrets.DATABASE_URL }}
-      PYTHONPATH: /home/runner/work/AI_Career_Coach/AI_Career_Coach
+      PYTHONPATH: /home/runner/work/AI_Career_Coach/AI_Career_Coach 
 
     steps:
       - name: Checkout code
@@ -69,13 +69,11 @@ jobs:
             ${{ runner.os }}-pip-
 
       - name: Install dependencies
-        working-directory: AI_Career_Coach
         run: |
           pip install -r requirements/base.txt
           pip install pytest pytest-cov pytest-asyncio
 
       - name: Run tests with coverage
-        working-directory: AI_Career_Coach
         run: |
           pytest tests/ -v \
             --cov=src \
@@ -87,7 +85,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: coverage-report
-          path: AI_Career_Coach/coverage.xml
+          path: coverage.xml 
 
   # ─────────────────────────────────────────
   # JOB 3 : Build Docker
